<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        tools:context="activity_sign_up"
        style="@style/SpacedContainer"
    >

        <TextView
            style="@style/TextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/br_user_signup_title" />

        <EditText
            style="@style/Input"
            android:id="@+id/input_user_name"
            android:hint="@string/br_input_user_name"
            android:autofillHints="name"
            android:inputType="text" />
        <EditText
            style="@style/Input"
            android:id="@+id/input_user_surname"
            android:hint="@string/br_input_user_surname"
            android:autofillHints="surname"
            android:inputType="text" />
        <EditText
            style="@style/Input"
            android:id="@+id/input_user_mail"
            android:hint="@string/br_input_user_mail"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress" />
        <EditText
            style="@style/Input"
            android:id="@+id/input_user_username"
            android:hint="@string/br_input_user_username"
            android:inputType="text"
            android:autofillHints="text" />
        <EditText
            style="@style/Input"
            android:id="@+id/input_user_password"
            android:hint="@string/br_input_user_password"
            android:inputType="textPassword"
            android:autofillHints="password" />
        <EditText
            style="@style/Input"
            android:id="@+id/input_user_confirmpassword"
            android:hint="@string/br_input_user_confirmpassword"
            android:inputType="textPassword"
            android:autofillHints="password" />

        <Button
            android:id="@+id/button_user_signup"
            style="@style/Button"
            android:text="@string/br_button_user_signup" />

    </LinearLayout>
</ScrollView>