<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        tools:context="activity_sign_in"
        style="@style/SpacedContainer"
        >

        <TextView
            style="@style/TextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/br_user_signin_title" />

        <EditText
            style="@style/Input"
            android:id="@+id/input_user_username"
            android:hint="@string/br_input_user_username"
            android:inputType="text"
            android:autofillHints="text" />

        <EditText
            style="@style/Input"
            android:id="@+id/input_user_password"
            android:hint="@string/br_input_user_password"
            android:inputType="textPassword"
            android:autofillHints="password"
            />

        <Button
            android:id="@+id/button_user_signin"
            style="@style/Button"
            android:text="@string/br_button_user_signin" />

        <Button
            android:id="@+id/button_user_signup"
            style="@style/SecondaryButton"
            android:text="@string/br_button_user_signup" />
    </LinearLayout>
</ScrollView>